; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/ipvs/extr_ip_vs_dh.c_ip_vs_dh_get.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/ipvs/extr_ip_vs_dh.c_ip_vs_dh_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ip_vs_dest = type { i32 }
%struct.ip_vs_dh_bucket = type { %struct.ip_vs_dest* }
%union.nf_inet_addr = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.ip_vs_dest* (i32, %struct.ip_vs_dh_bucket*, %union.nf_inet_addr*)* @ip_vs_dh_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.ip_vs_dest* @ip_vs_dh_get(i32 %0, %struct.ip_vs_dh_bucket* %1, %union.nf_inet_addr* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.ip_vs_dh_bucket*, align 8
  %6 = alloca %union.nf_inet_addr*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.ip_vs_dh_bucket* %1, %struct.ip_vs_dh_bucket** %5, align 8
  store %union.nf_inet_addr* %2, %union.nf_inet_addr** %6, align 8
  %7 = load %struct.ip_vs_dh_bucket*, %struct.ip_vs_dh_bucket** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = load %union.nf_inet_addr*, %union.nf_inet_addr** %6, align 8
  %10 = call i64 @ip_vs_dh_hashkey(i32 %8, %union.nf_inet_addr* %9)
  %11 = getelementptr inbounds %struct.ip_vs_dh_bucket, %struct.ip_vs_dh_bucket* %7, i64 %10
  %12 = getelementptr inbounds %struct.ip_vs_dh_bucket, %struct.ip_vs_dh_bucket* %11, i32 0, i32 0
  %13 = load %struct.ip_vs_dest*, %struct.ip_vs_dest** %12, align 8
  ret %struct.ip_vs_dest* %13
}

declare dso_local i64 @ip_vs_dh_hashkey(i32, %union.nf_inet_addr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
